# P2P_SDK

./: P2P_SDK.sln  P2P_SDK.sln.GhostDoc.xml
P2P_SDK/: P2PSDK.cpp  P2PSDK.h  P2P_SDK.APS  P2P_SDK.rc  P2P_SDK.vcproj  P2P_SDK.vcxproj  P2P_SDK.vcxproj.filters  cTest.cpp
P2P_SDK/Debug/: BuildLog.htm  RCa11360  mt.dep  vc80.idb
P2P_SDK/base/: BaseXMLHelper.cpp  BaseXMLHelper.h  PThreadProcess.cpp  PThreadProcess.h  PthreadMutexLock.cpp  PthreadMutexLock.h  TemplateEntityClass - 副本.h  TemplateEntityClass.h  Timer.cpp  Timer.h
P2P_SDK/base/CThreadPool/: CThreadPool.sln
P2P_SDK/base/CThreadPool/CThreadPool/: AVXThreadPool.cpp  AVXThreadPool.h  CMakeLists.txt  CThreadPool.vcxproj  CThreadPool.vcxproj.filters  Config.h  Config.h.in  ReadMe.txt  ThreadBase.cpp  ThreadBase.h  ThreadPoolFacotry.cpp  ThreadPoolFacotry.h  ThreadPoolForLinux.cpp  ThreadPoolForLinux.h  WorkQueue.cpp  WorkQueue.h  thread-pool.cpp  thread-pool.h
P2P_SDK/base/CThreadPool/document/: 优化记事本.txt  线程模块详细设计图纸.vsd  线程模块详细设计说明书.doc
P2P_SDK/base/DBPool/: DBPool.sln
P2P_SDK/base/DBPool/DBPool/: CMakeLists.txt  Config.h  Config.h.in  DBPool.cpp  DBPool.h  DBPool.vcxproj  DBPool.vcxproj.filters  ReadMe.txt
P2P_SDK/base/DBPool/document/: 优化记事本.txt  数据库池模块详细设计图纸.vsd  数据库池模块详细设计说明书.doc
P2P_SDK/base/Log/: Log.opensdf  Log.sln  Log.sln.GhostDoc.xml
P2P_SDK/base/Log/Log/: CMakeLists.txt  Config.h  Config.h.in  Global.h  Log.vcxproj  Log.vcxproj.filters  LogBase.cpp  LogBase.h  MySelfLog.cpp  MyselfLog.h  ReadMe.txt  RecordLog.cpp  RecordLog.h  WriteLog.cpp  WriteLog.h
P2P_SDK/base/Log/document/: ~$执行路径模块详细设计说明书.doc  优化记事本.txt  日志模块详细设计图纸.vsd  日志模块详细设计说明书.doc
P2P_SDK/base/MemoryPool/: MemoryPool.sln
P2P_SDK/base/MemoryPool/MemoryPool/: BasicIncludes.h  CMakeLists.txt  CMemoryPool.cpp  CMemoryPool.h  Config.h  Config.h.in  CriticalCS.cpp  CriticalCS.h  IMemoryBlock.h  MemoryPool.vcxproj  MemoryPool.vcxproj.filters  MemoryPoolFactory.cpp  MemoryPoolFactory.h  ReadMe.txt  SMemoryChunk.h
P2P_SDK/base/MemoryPool/document/: MemoryPool图纸.vsd  MemoryPool模块详细设计说明书.doc  优化记事本.txt
P2P_SDK/base/communication/: IClientBaseCommunication.h  IOHandler.cpp  IOHandler.h  TCPClientBaseCommunication.cpp  TCPClientBaseCommunication.h  UDPClientBaseCommunication.cpp  UDPClientBaseCommunication.h
P2P_SDK/base/tinyxml/: CMakeLists.txt  Config.h  Config.h.in  ReadMe.txt  ShellScript  Xml.cpp  Xml.h  tinyxml.sln  tinyxml.vcxproj  tinyxml.vcxproj.filters  tinyxml2.cpp  tinyxml2.h
P2P_SDK/base/tinyxml/documet/: 优化记事本.txt
P2P_SDK/base/tinyxml2/: Makefile  tinyxml2.cpp  xmltest  xmltest.cpp
P2P_SDK/base/tinyxml2/tinyxml2/: tinyxml2.sdf  tinyxml2.sln.GhostDoc.xml
P2P_SDK/common/: DeviceInfo.cpp  DeviceInfo.h  PubSubModeBase.h  RouterInfo.cpp  RouterInfo.h  SessionManager.cpp  SessionManager.h  UACInfo.cpp  UACInfo.h  UnifiedDispatchManager.cpp  UnifiedDispatchManager.h  commonUtil.h
P2P_SDK/common/const/: MsgConst.h  NatConst.h
P2P_SDK/common/hearbeat/: HearBeat.cpp  HearBeat.h
P2P_SDK/common/protocol/: CommunicationMsgOperater.cpp  CommunicationMsgOperater.h  RelayMsgProtocol.cpp  RelayMsgProtocol.h
P2P_SDK/natcross/: NatCrossHelper.cpp  NatCrossHelper.h  NatDetectionHelper.cpp  NatDetectionHelper.h  StunUtil.h
P2P_SDK/p2pserver/: P2PHandler.cpp  P2PHandler.h  P2PHearBeat.cpp  P2PHearBeat.h
P2P_SDK/relayserver/: RelayHandler.cpp  RelayHandler.h  RelayHearBeat.cpp  RelayHearBeat.h
